fixed song name animation on mobile

--- a/music/src/assets/main.css
+++ b/music/src/assets/main.css
@@ -117,17 +117,35 @@ input[type="file"]{
   animation: slide 50s linear infinite;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 575px) {
   .introduction-bg {
     background-image: url('../assets/img/header-1.jpg');
   }
+  .c {
+    position:relative;
+    max-height: 1rem;
+    width:100%;
+    height: 1rem;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+  }
   .player-song-info {
-    margin-top: -34px;
+    margin-top: -26px;
   }
   .song-title {
     /* width: 50%; */
-    animation: text-slide 5s linear infinite;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    animation: scroll-left 10s linear 2s infinite;
+    line-height: 1rem;
+    font-size: 1rem;
+    /* animation: text-slide 5s linear infinite; */
   }
+}
+
+@media (max-width: 400px) {
   .drew-music {
     font-size: 1.1rem;
   }
@@ -154,11 +172,15 @@ input[type="file"]{
   }
 }
 
-@keyframes text-slide {
+@keyframes scroll-left {
   0% {
-    transform: translateX(0);
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
   }
   100% {
-    transform: translateX(50px);
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
   }
 }
